--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,8 @@ else()
   cmake_minimum_required(VERSION 2.8.7 FATAL_ERROR)
 endif()
 
-if(NOT BOOST_CONFIG_INCLUDE_DIRS)
-  message(FATAL_ERROR "Cannot find boost.config!")
-endif(NOT BOOST_CONFIG_INCLUDE_DIRS)
+project(boost_assert)
 
-set(BOOST_ASSERT_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include" CACHE STRING "Location of boost.assert headers")
+add_library(boost_assert INTERFACE GLOBAL)
 
-set(BOOST_INCLUDE_DIRS "${BOOST_INCLUDE_DIRS}" "${BOOST_ASSERT_INCLUDE_DIRS}" CACHE STRING "All Boost headers" FORCE)
+target_include_directories(boost_assert BEFORE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
