--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ target_include_directories(boost_assert BEFORE INTERFACE ${CMAKE_CURRENT_SOURCE_
 
 install(TARGETS boost_assert DESTINATION lib)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/boost DESTINATION include)
+
+add_library(boost::assert ALIAS boost_assert)
