Made linking easier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(boost_assert INTERFACE)
 
 target_include_directories(boost_assert BEFORE INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
+target_link_libraries(boost_assert INTERFACE boost::config)
+
 install(TARGETS boost_assert DESTINATION lib)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/boost DESTINATION include)
 
